tenzir/integration/data/reference/pipelines_local/test_print_json_in_cef/step_01.ref
error: field dvc is not of type record
 --> <input>:1:18
  |
1 | read cef | print extension.dvc json 
  |                  ^^^^^^^^^^^^^ 
  |